force-app/main/default/objects/rtms__CustomerInvoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account</relationshipLabel>
    <relationshipName>Account</relationshipName>
</CustomField>