force-app/main/default/objects/rtms__CustomerInvoice__c/fields/Accounting_Status__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Status__c</fullName>
    <label>Accounting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>false</default></value>
            <value><fullName>Ready for Accounting</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>