force-app/main/default/objects/rtms__CustomerInvoice__c/fields/Invoice_Comments__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Comments__c</fullName>
    <label>Invoice Comments</label>
    <type>TextArea</type>
</CustomField>