force-app/main/default/objects/rtms__CustomerInvoice__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <label>Load</label>
    <type>Lookup</type>
    <referenceTo>rtms__Load__c</referenceTo>
    <relationshipLabel>Load</relationshipLabel>
    <relationshipName>Load</relationshipName>
</CustomField>