force-app/main/default/objects/rtms__CustomerInvoice__c/fields/QuickBooks_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Invoice_Id__c</fullName>
    <label>QuickBooks Invoice Id</label>
    <type>Text</type>
    <length>30</length>
    <externalId>true</externalId>
</CustomField>