force-app/main/default/objects/rtms__CustomerInvoice__c/fields/QuickBooks_Invoice_SyncToken__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Invoice_SyncToken__c</fullName>
    <label>QuickBooks Invoice SyncToken</label>
    <type>Text</type>
    <length>10</length>
</CustomField>